fix  overflow hide

--- a/css/custom.css
+++ b/css/custom.css
@@ -717,7 +717,7 @@ X3D, x3d {
 }
 .card-body{
     overflow: hidden;
-    height: 600px;
+    height: 30rem;
 }
 .swiper {
     width: 600px;
